test_suite/ui/not_enum.stderr
error: #[bitflags] requires an enum
 --> $DIR/not_enum.rs:2:1
  |
2 | / #[derive(Copy, Clone)]
3 | | struct Foo(u16);
  | |________________^

error: #[bitflags] requires an enum
 --> $DIR/not_enum.rs:6:1
  |
6 | const WTF: u8 = 42;
  | ^^^^^^^^^^^^^^^^^^^
